// Vitest Snapshot v1

exports[`schema validate test. > should throw an error on the patterns option: {"entries":"src/main.ts"} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest misses the property 'schemaVersion'. Should be:
   string
   -> The version number of the manifest.
 - Manifest.entries should be an array:
   [string, ...]"
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":["app.js"],"env":{"123":{"server":{"port":4000}}}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.env has an unknown property '123'. These properties are valid:
   object {} (additional property names should match pattern \\"[a-zA-Z]+\\")
   -> env configuration for different environments."
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":["app.js"],"env":{"development":{"server":{"port":99999}}}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.env.development.server.port should be >= 0 and <= 65535."
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":["app.js"],"externals":{"123":"Vue"}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.externals should be one of these:
   [string, ...] | [object { name, regular?, globalName?, … }, ...]
   Details:
    * Manifest.externals should be an array:
      [string, ...]
    * Manifest.externals should be an array:
      [object { name, regular?, globalName?, … }, ...]"
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":["app.js"],"formats":"cjs"} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.formats should be an array:
   [\\"cjs\\" | \\"esm\\" | \\"iife\\" | \\"umd\\" | \\"system\\", ...]"
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":["app.js"],"formats":["umds"]} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.formats[0] should be one of these:
   \\"cjs\\" | \\"esm\\" | \\"iife\\" | \\"umd\\" | \\"system\\""
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":["app.js"],"formats":{"foo":"cjs"}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.formats should be an array:
   [\\"cjs\\" | \\"esm\\" | \\"iife\\" | \\"umd\\" | \\"system\\", ...]"
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":["app.js"],"outDir":123} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.outDir should be a string."
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":["app.js"],"server":{"host":100}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.server.host should be a string."
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":["app.js"],"server":{"port":"3000"}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.server.port should be a number (should be >= 0 and <= 65535)."
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":["app.js"],"sourcemap":"false"} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.sourcemap should be a boolean."
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"foo":"foo.js"},"exports":{"index":{}}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.entries should be an array:
   [string, ...]"
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"index":"app.js","foo":"foo.html"}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.entries should be an array:
   [string, ...]"
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{"index":"app.js"},"server":{"proxy":[{"url":"/api","target":"https://xxx","pathRewrite":[{"regular":123,"replacement":""}]}]}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.entries should be an array:
   [string, ...]
 - Manifest.server.proxy[0].pathRewrite[0].regular should be one of these:
   RegExp | string
   Details:
    * Manifest.server.proxy[0].pathRewrite[0].regular should be an instance of RegExp.
    * Manifest.server.proxy[0].pathRewrite[0].regular should be a string."
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","entries":{}} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.entries should be an array:
   [string, ...]"
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":"0.0.0","externals":""} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest misses the property 'entries'. Should be:
   [string, ...]
 - Manifest.externals should be one of these:
   [string, ...] | [object { name, regular?, globalName?, … }, ...]
   Details:
    * Manifest.externals should be an array:
      [string, ...]
    * Manifest.externals should be an array:
      [object { name, regular?, globalName?, … }, ...]"
`;

exports[`schema validate test. > should throw an error on the patterns option: {"schemaVersion":1,"entries":["app.js"]} 1`] = `
"Invalid Manifest object. Project has been initialized using a Manifest object that does not match the API schema.
 - Manifest.schemaVersion should be a string.
   -> The version number of the manifest."
`;
